<resources>
    <string name="app_name">Explore Nepal</string>
    <string name="explore">Explore</string>
    <string name="recommendation">Recommendation</string>
    <string name="maps">Maps</string>
    <string name="bookmark">Bookmark</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">About us</string>
    <string name="exploreName">Explore</string>
    <string name="famous_places">Famous places</string>
    <string name="popular">Popular</string>
    <string name="new_destinations">New destinations</string>
    <string name="nearby_places">Nearby places</string>
    <string name="your_wish_list">Your wishlist</string>

    <string name="was_in_tunnel" translatable="false">was_in_tunnel</string>
    <string name="was_navigation_stopped" translatable="false">was_navigation_stopped</string>

    //mapbox key
    <string name="access_token">sk.eyJ1Ijoic2FtaXIxMjMxIiwiYSI6ImNrN3N1angweDAxMnQzaG4xNGJzdGp4YjcifQ.KOB8hYf4GYEYOcMCJogNfA</string>
    <string name="explore_nepal">Explore Nepal</string>
    <string name="about_text">
        Explore Nepal is a tourist guide mobile application which mainly focuses the tourists visiting Nepal. This application has the functionality of navigating the users to their destinations. This application mainly targets visitors and tourists who are fond of travelling different destinations carrying different purposes like entertainment, adventure, business, sports, rest, night out and many other reasons.

    </string>
    <string name="aboutTxt">I have done different surveys among both in visitors and with the local people around the destination. I collected various forms of problems from the visitors which they had faced or might face while traveling through surveys. In this way, I succeed to gather the requirements of my mobile application which could solve the problems faced by the travelers. I found survey as one of the efficient and effective way of getting the perception of clients about the application.
</string>
    <string name="rate_this_app">Rate this app.</string>
    <string name="aboutTxt1">Explore Nepal is a simple android application providing proper guide of some popular tourism destinations of Nepal. This application approaches the collection of famous places of every states of our country. It mainly provides the list of places in Nepal people must visit in life time for adventurous activities like trekking, paragliding, rafting, bungee jumping, etc. It also informs the best time to travel the destinations, informs about the transportation facility to reach there and provides the detail description of each destination.
</string>
    <string name="copyright">Copyright © Samir Alam 2020. All Rights Reserved.</string>


</resources>
